client: forms overflowing main html tag fixed

--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -2,6 +2,7 @@
   color: black;
   background-color: white;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -16,6 +17,7 @@
   margin: 0 auto;
   padding-bottom: 1.5rem;
   font-size: 2rem;
+  overflow: auto;
 }
 
 .Title {
